@stratusidx/idx 0.12.1 fix disclaimer spacing

--- a/packages/idx/src/disclaimer/disclaimer.component.less
+++ b/packages/idx/src/disclaimer/disclaimer.component.less
@@ -13,6 +13,7 @@ stratus-idx-disclaimer {
     font-size: 12px;
     .disclaimer-container {
       /* Individual MLS' will each have a separate .disclaimer-container */
+      margin-bottom: 15px;
       .mls-service-logo {
         /* In future, Logos will be maintained outside of the disclaimer text (not here) TODO remove this section */
         display: block;
@@ -23,8 +24,9 @@ stratus-idx-disclaimer {
     .mls-logos-container {
       .mls-service-logo {
         display: block;
+        float: left;
         max-width: 80px;
-        margin-top: 20px;
+        margin-right: 10px;
       }
     }
   }
